moved classes to src folder